# decrypt-otpauth

./: CODEOWNERS  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: run_tests.yml
decrypt_otpauth/: main.py  parse_args.py
decrypt_otpauth/core/: decryptor.py  file.py  rn_cryptor.py
decrypt_otpauth/decryptors/: decrypt.py  decryptor.py  rncryptor_decryptor.py
decrypt_otpauth/ns_keyed_unarchiver/: registry.py  types_.py  unarchiver.py
decrypt_otpauth/otpauth/: account.py  algorithm.py  file.py  ns_types.py  reverse_enum.py  types_.py
decrypt_otpauth/qrcode/: qrcode.py  uri.py
decrypt_otpauth/tests/: test_main.py
decrypt_otpauth/tests/data/: Accounts.otpauthdb  expected_uris.txt
decrypt_otpauth/tests/decryptors/: test_rncryptor_decryptor.py
decrypt_otpauth/tests/ns_keyed_unarchiver/: conftest.py  test_unarchiver.py
