[project]
name = "decrypt-otpauth"
version = "0.1.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography==46.0.3",
    "pillow==12.1.0",
    "qrcode==8.2",
]

[dependency-groups]
lint = [
    "pre-commit==4.5.1",
    "ruff==0.14.10",
]
dev = [
    "pytest==9.0.2",
    "opencv-python==4.12.0.88",
]
