[project]
name = "decrypt-otpauth"
version = "0.1.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography==47.0.0",
    "pillow==12.2.0",
    "qrcode==8.2",
]

[dependency-groups]
lint = [
    "pre-commit==4.6.0",
    "ruff==0.15.11",
]
dev = [
    "pytest==9.0.3",
    "opencv-python==4.13.0.92",
]
